fix splash visibility

--- a/css/site.styl
+++ b/css/site.styl
@@ -473,6 +473,8 @@ a.button-shop,
   display: flex
   justify-content: center
   flex-direction: column
+  .swiper-container
+    visibility: visible
 
 .splash-swiper
   position: fixed !important
